syntax = "proto3";

package auth.v1;

option go_package = "golang-social-media/pkg/gen/auth/v1;authv1";

service AuthService {
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
}

